# callscript

./: .coveragerc  .gitignore  CHANGELOG.md  CHANGELOG.rst  LICENSE  LICENSE.txt  README.md  check.py  cli.py  cli.spec  pyproject.toml  tox.ini
.github/workflows/: publish-binary.yml  python-package.yml  python-publish.yml
callscript/: __init__.py  callscript.py  cli.py  redbaron_utils.py
changelog.d/: 20230114_172526_delgrosso.nick.md  20230115_143303_delgrosso.nick_fun.md  20230115_152053_delgrosso.nick_fun.md
examples/: script.py  script2.py  script3.py  script4.py
src/callscript/: __init__.py  callscript.py  runner.py
tests/: test_callscript.py  test_runner.py
